--- a/experiment-pilot/veridicality-pilot1.html
+++ b/experiment-pilot/veridicality-pilot1.html
@@ -36,14 +36,16 @@
     <div>
 
 <br>
-<img src="../experiments-shared/princeton-logo.png" alt="Princeton Program in Linguistics" width="240">
-<br>
+<img src="SNU-logo.png" alt="Seoul National University" width="240">
+<!-- https://github.com/sunwooj/experiments-shared/SNU-logo.png -->
+<br><br>
 <p class='block-text2'>
 안녕하세요! 실험에 관심을 가져 주셔서 감사합니다. 참여에 앞서 아래 설명문 및 동의서를 읽어 보시기 바랍니다.
 </p>
 
 <p class='scrollbox'>
-설명문 <br>
+<span class='center-text'> 설명문 </span> 
+<br><br>
 연구 과제명 : 한국어 억양이 동사 해석에 미치는 영향 <br>
 연구 책임자명 : 정선우 (인문대학 언어학과 조교수)
 <br><br>
@@ -93,12 +95,13 @@
 <br>
 본 연구에 대해 질문이 있거나 연구 중간에 문제가 생길 시 다음 연구 담당자에게 연락하십시오.
 <br>
-이름: 정선우 / 전화번호: 02-880-9039, 010-2120-6327               
+이름: 정선우 <br> 전화번호: 02-880-9039, 010-2120-6327               
 <br><br>
 만일 어느 때라도 연구참여자로서 귀하의 권리에 대한 질문이 있다면 다음의 서울대학교 생명윤리위원회에 연락하십시오. <br>
-서울대학교 생명윤리위원회 (SNUIRB) / 전화번호: 02-880-5153 
+서울대학교 생명윤리위원회 (SNUIRB) <br> 전화번호: 02-880-5153 
 <br><br>
-동의서 <br>
+<span class='center-text'> 동의서 </span> 
+<br><br>
 연구 과제명 : 한국어 억양이 동사 해석에 미치는 영향 <br>
 연구 책임자명 : 정선우 (인문대학 언어학과, 조교수) 
 <br><br>
@@ -108,11 +111,18 @@
 4. 나는 이 연구에서 얻어진 나에 대한 정보를 현행 법률과 생명윤리위원회 규정이 허용하는 범위 내에서 연구자가 수집하고 처리하는 데 동의합니다. <br>
 5. 나는 담당 연구자나 위임 받은 대리인이 연구를 진행하거나 결과 관리를 하는 경우와 법률이 규정한 국가 기관 및 서울대학교 생명윤리위원회가 실태 조사를 하는 경우에는 비밀로 유지되는 나의 개인 신상 정보를 확인하는 것에 동의합니다. <br>
 6. 나는 언제라도 이 연구의 참여를 철회할 수 있고 이러한 결정이 나에게 어떠한 해도 되지 않을 것이라는 것을 압니다. 
+<br><br>
+동의서에 동의하시고 실험 참여를 원하시면 아래 항목을 체크 하시고 실험 시작 버튼을 눌러주세요.
 </p>
 
+<form class='center-text'>
+  <input type='checkbox' id='consent' name='consent' value='1'> 위 내용을 이해 했으며 실험 참여에 동의합니다. 
+</form>
+
 <br><br>
-<button type='button' id='gotoInstructions'>Proceed to instructions</button>
+<button type='button' id='gotoInstructions'>실험으로</button>
 <br><br> 
+<p><span style='color: blue' id="checkboxWarning"></span></p>
 
     </div>
 </div>
