--- a/experiment-pilot/veridicality-pilot1.html
+++ b/experiment-pilot/veridicality-pilot1.html
@@ -16,7 +16,7 @@
 
 <script src="veridicality-pilot1.js"></script>
 
-<!-- <link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link> -->
+<link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link>
 
 <link href ="veridicality.css" rel="stylesheet" type="text/css"/>
 
