--- a/experiment-pilot/veridicality-pilot1.html
+++ b/experiment-pilot/veridicality-pilot1.html
@@ -6,10 +6,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 <!-- FOR MTURK -->
-<script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey.0.5.js"></script> 
+<!-- <script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey.0.5.js"></script>  -->
 
 <!-- FOR PHP DATA GATHERING -->
-<!-- <script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey-extension.js"></script>  -->
+<script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey-extension.js"></script> 
 
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
