--- a/experiment-pilot/veridicality-pilot1.html
+++ b/experiment-pilot/veridicality-pilot1.html
@@ -6,10 +6,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 <!-- FOR MTURK -->
-<!-- <script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey.0.5.js"></script>  -->
+<script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey.0.5.js"></script> 
 
 <!-- FOR PHP DATA GATHERING -->
-<script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey-extension.js"></script> 
+<!-- <script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey-extension.js"></script>  -->
 
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
@@ -89,7 +89,7 @@
 <br><br>
 10. 이 연구에 참가하면 사례가 지급됩니까?
 <br>
-귀하의 연구 참여시 감사의 뜻으로 스타벅스 커피 기프티콘 (1장, 4000원 상당)이 증정될 것입니다. 기프티콘은 귀하의 휴대폰으로 발송됩니다.                    
+귀하의 연구 참여시 감사의 뜻으로 스타벅스 커피 기프티콘 (1장, 4000원 상당)이 증정될 것입니다. 기프티콘은 귀하의 휴대폰으로 발송됩니다. 사례비를 지급받기 위해서는 설문 끝에 나타나는 회색 바탕의 실험 결과를 전체 선택 하셔서 복사한 뒤 연구자 sunwooj@snu.ac.kr 에게 보내주셔야 합니다.                    
 <br><br>
 11. 연구에 대한 문의는 어떻게 해야 됩니까?
 <br>
@@ -156,7 +156,7 @@
 
 
 
-<p><span style="font-weight: bold; color: #8C1515;"> 음성파일 56개 중 <span class="item_number">{{}}</span> 번째</span></p>
+<p><span style="font-weight: bold; color: #8C1515;"> 음성 파일 46개 중 <span class="item_number">{{}}</span> 번째</span></p>
 
 
 
@@ -164,9 +164,11 @@
 <!-- Audio stimulus1 displayed here -->
 <form id='audioDisplay1'>
 <br>
-<span style="font-weight: bold;" class='currentName1'>{{}}</span>는 다음과 같이 말했습니다 (음성파일을 클릭해 <span style="font-weight: bold;" class='currentName1'>{{}}</span>의 발화 내용을 들어 주세요): 
-<br>
+<span style="font-weight: bold;" class='currentName1'>{{}}</span>는 다음과 같이 말했습니다: 
+<br><br>
 <audio id="currentAudio1" controls=""><source src="#" type="audio/wav"></audio>
+<br><br>
+<span style="font-size: 80%;"> 음성 파일을 클릭해 <span style="font-weight: bold;" class='currentName1'>{{}}</span>의 발화 내용을 들어 주세요. <br> 파일 로딩에 시간이 약간 걸릴 수 있습니다. </span>
 </form>
 
 
@@ -175,42 +177,37 @@
 <!-- Q1: Naturalness rating -->
 <form id='responseForm1'>
 
-<p class='block-text'>Q1: 위에서 들으신 <span class='currentName1'>{{}}</span>의 발화가 얼마나 자연스러운 한국어 발화로 들립니까?
+<p class='questionSent'>Q1: 위에서 들으신 <span class='currentName1'>{{}}</span>의 발화가 얼마나 자연스러운 한국어 발화로 들립니까?
 </p>
 
-<!-- Q1: Picture with target sentence -->
-<!-- <img id="currentPic" width="440"><source src="#"></img>
-<br> -->
-
-<br><br>
 
 <table align='center'>
     <tr>
-        <td width="14%"> <span class='cellLabel'>전혀 자연스럽지 않음</span> </td>
-        <td width="14%"> </td>
-        <td width="14%"> </td>
-        <td width="14%"> </td>
-        <td width="14%"> </td>
-        <td width="14%"> </td>
-        <td width="14%"> <span class='cellLabel'>매우 자연스러움</span> </td>
+        <td align="center" width="10%"> <span class='cellLabel'>전혀 자연스럽지 않음</span> </td>
+        <td align="center" width="10%"> </td>
+        <td align="center" width="10%"> </td>
+        <td align="center" width="10%"> </td>
+        <td align="center" width="10%"> </td>
+        <td align="center" width="10%"> </td>
+        <td align="center" width="10%"> <span class='cellLabel'>매우 자연스러움</span> </td>
     </tr>
     <tr>
-        <td width="14%"><input type="radio" class="likertN1" name="natural" value="1" /></td>
-        <td width="14%"><input type="radio" class="likertN1" name="natural" value="2" /></td>
-        <td width="14%"><input type="radio" class="likertN1" name="natural" value="3" /></td>
-        <td width="14%"><input type="radio" class="likertN1" name="natural" value="4" /></td>
-        <td width="14%"><input type="radio" class="likertN1" name="natural" value="5" /></td>
-        <td width="14%"><input type="radio" class="likertN1" name="natural" value="6" /></td>
-        <td width="14%"><input type="radio" class="likertN1" name="natural" value="7" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN1" name="natural" value="1" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN1" name="natural" value="2" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN1" name="natural" value="3" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN1" name="natural" value="4" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN1" name="natural" value="5" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN1" name="natural" value="6" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN1" name="natural" value="7" /></td>
     </tr>
     <tr>
-        <td width="14%">1</td>
-        <td width="14%">2</td>
-        <td width="14%">3</td>
-        <td width="14%">4</td>
-        <td width="14%">5</td>
-        <td width="14%">6</td>
-        <td width="14%">7</td>
+        <td align="center" width="10%">1</td>
+        <td align="center" width="10%">2</td>
+        <td align="center" width="10%">3</td>
+        <td align="center" width="10%">4</td>
+        <td align="center" width="10%">5</td>
+        <td align="center" width="10%">6</td>
+        <td align="center" width="10%">7</td>
     </tr>
 </table>
 
@@ -230,42 +227,40 @@
 
 <form id='responseForm2'>
 
-<p class='block-text'>Q2: 위에서 들으신 <span class='currentName1'>{{}}</span>의 발화를 바탕으로, 아래와 같은 결론을 내릴 수 있는지 평가해 주세요.
+<p class='questionSent'>Q2: 위에서 들으신 <span class='currentName1'>{{}}</span>의 발화를 바탕으로, 아래와 같은 결론을 내릴 수 있는지 평가해 주세요.
 </p>
 
 <p class='center-text'>
     <span class='currentName1'>{{}}</span>는 <span class='veriProposition'>{{}}</span>.
 </p>
 
-<br><br>
-
 <table align='center'>
     <tr>
-        <td width="14%"> <span class='cellLabel'>전혀 그렇지 않다</span> </td>
-        <td width="14%"> </td>
-        <td width="14%"> </td>
-        <td width="14%"> </td>
-        <td width="14%"> </td>
-        <td width="14%"> </td>
-        <td width="14%"> <span class='cellLabel'>매우 그렇다</span> </td>
+        <td align="center" width="10%"> <span class='cellLabel'>전혀 그렇지 않다</span> </td>
+        <td align="center" width="10%"> </td>
+        <td align="center" width="10%"> </td>
+        <td align="center" width="10%"> </td>
+        <td align="center" width="10%"> </td>
+        <td align="center" width="10%"> </td>
+        <td align="center" width="10%"> <span class='cellLabel'>매우 그렇다</span> </td>
     </tr>
     <tr>
-        <td width="14%"><input type="radio" class="likertN2" name="veri" value="1" /></td>
-        <td width="14%"><input type="radio" class="likertN2" name="veri" value="2" /></td>
-        <td width="14%"><input type="radio" class="likertN2" name="veri" value="3" /></td>
-        <td width="14%"><input type="radio" class="likertN2" name="veri" value="4" /></td>
-        <td width="14%"><input type="radio" class="likertN2" name="veri" value="5" /></td>
-        <td width="14%"><input type="radio" class="likertN2" name="veri" value="6" /></td>
-        <td width="14%"><input type="radio" class="likertN2" name="veri" value="7" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN2" name="veri" value="1" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN2" name="veri" value="2" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN2" name="veri" value="3" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN2" name="veri" value="4" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN2" name="veri" value="5" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN2" name="veri" value="6" /></td>
+        <td align="center" width="10%"><input type="radio" class="likertN2" name="veri" value="7" /></td>
     </tr>
     <tr>
-        <td width="14%">1</td>
-        <td width="14%">2</td>
-        <td width="14%">3</td>
-        <td width="14%">4</td>
-        <td width="14%">5</td>
-        <td width="14%">6</td>
-        <td width="14%">7</td>
+        <td align="center" width="10%">1</td>
+        <td align="center" width="10%">2</td>
+        <td align="center" width="10%">3</td>
+        <td align="center" width="10%">4</td>
+        <td align="center" width="10%">5</td>
+        <td align="center" width="10%">6</td>
+        <td align="center" width="10%">7</td>
     </tr>
 </table>
 
@@ -277,19 +272,19 @@
 
 
 <!-- Optional responses -->
-<p id='optional1' class='block-text'>(선택 답변) 그 밖에 이 문제들에 관해 하시고 싶으신 말씀이 있으십니까?</p>
+<p id='optional1' class='questionSent'>(선택 답변) 그 밖에 이 문제들에 관해 하시고 싶으신 말씀이 있으십니까?</p>
 
 <input type='text' id="commentBox1" class="commentBox" style="width: 400px;" value="" />
 
 
 <!-- Warning message in case any of Q1-Q2 doesn't get a response -->
-<p><span style='color: blue' id="warning2"></span></p>
+<p><span style='color: blue' id="warning"></span></p>
 
 
 <button type='button' id='continue'>다음 질문으로 계속</button>
 
 
-<p><span style="font-weight: bold; color: #8C1515;"> 음성파일 56 중 <span class="item_number">{{}}</span> 번째</span></p>
+<p><span style="font-weight: bold; color: #8C1515;"> 음성 파일 46개 중 <span class="item_number">{{}}</span> 번째</span></p>
 
         </div>
     </div>
@@ -307,7 +302,7 @@
 <form id='languageForm'>
 
 <p class='questionSent'> 
-본 실험이 끝났습니다. 끝으로 아래 설문을 간단히 작성해 주시기 바랍니다.
+본 실험이 끝났습니다. 끝으로 아래 설문을 간단히 작성해 주시기 바랍니다. 설문 뒤 실험 끝내기를 클릭하시면 나타나는 회색 바탕의 실험 결과를 전체 선택 하셔서 복사하신 뒤 sunwooj@snu.ac.kr 로 보내주시기 바랍니다.
 </p> <br>
 
 <!-- 
@@ -416,7 +411,7 @@ Please list any other languages that you speak fluently.
 
 
 <div class='slide' id='finish'>
-<p>실험이 끝났습니다. 참여해 주셔서 매우 감사합니다!</p>
+<p>실험이 끝났습니다. 참여해 주셔서 매우 감사합니다! 아래에 뜨는 회색 바탕의 실험 결과를 전체 선택 하셔서 (맥: cmd + a, 윈도우: ctrl + a) 복사하신 뒤 (맥: cmd + c, 윈도우: ctrl + c) 반드시 연구자 이메일로 sunwooj@snu.ac.kr 실험 결과를 보내주시기 바랍니다 (붙여넣기 사용; 맥: cmd + v, 윈도우: ctrl + v). </p>
 </div>
 
 </body>
