--- a/experiment-pilot/veridicality-pilot1-server.html
+++ b/experiment-pilot/veridicality-pilot1-server.html
@@ -89,7 +89,7 @@
 <br><br>
 10. 이 연구에 참가하면 사례가 지급됩니까?
 <br>
-귀하의 연구 참여시 감사의 뜻으로 스타벅스 커피 기프티콘 (1장, 4000원 상당)이 증정될 것입니다. 기프티콘은 귀하의 휴대폰으로 발송됩니다. 사례비를 지급받기 위해서는 설문 끝에 나타나는 회색 바탕의 실험 결과를 전체 선택 하셔서 복사한 뒤 연구자 sunwooj@snu.ac.kr 에게 보내주셔야 합니다.                    
+귀하의 연구 참여시 감사의 뜻으로 스타벅스 커피 기프티콘 (1장, 4000원 상당)이 증정될 것입니다. 기프티콘은 귀하의 휴대폰으로 발송됩니다.                   
 <br><br>
 11. 연구에 대한 문의는 어떻게 해야 됩니까?
 <br>
@@ -302,7 +302,7 @@
 <form id='languageForm'>
 
 <p class='questionSent'> 
-본 실험이 끝났습니다. 끝으로 아래 설문을 간단히 작성해 주시기 바랍니다. 설문 뒤 실험 끝내기를 클릭하시면 나타나는 회색 바탕의 실험 결과를 전체 선택 하셔서 복사하신 뒤 sunwooj@snu.ac.kr 로 보내주시기 바랍니다.
+본 실험이 끝났습니다. 끝으로 아래 설문을 간단히 작성해 주시기 바랍니다. 
 </p> <br>
 
 <!-- 
@@ -411,7 +411,7 @@ Please list any other languages that you speak fluently.
 
 
 <div class='slide' id='finish'>
-<p>실험이 끝났습니다. 참여해 주셔서 매우 감사합니다! 아래에 뜨는 회색 바탕의 실험 결과를 전체 선택 하셔서 (맥: cmd + a, 윈도우: ctrl + a) 복사하신 뒤 (맥: cmd + c, 윈도우: ctrl + c) 반드시 연구자 이메일로 sunwooj@snu.ac.kr 실험 결과를 보내주시기 바랍니다 (붙여넣기 사용; 맥: cmd + v, 윈도우: ctrl + v). </p>
+<p>실험이 끝났습니다. 참여해 주셔서 매우 감사합니다! </p>
 </div>
 
 </body>
