Updated pq pilots

--- a/experiment1/veri-exp1-ucdec.html
+++ b/experiment1/veri-exp1-ucdec.html
@@ -36,7 +36,7 @@
     <div>
 
 <br>
-<img src="SNU-logo.png" alt="Seoul National University" width="240">
+<img src="https://sunwooj.github.io/veridicality/experiments-shared/SNU-logo.png" alt="Seoul National University" width="240">
 <br><br>
 <p class='block-text2'>
 안녕하세요! 실험에 관심을 가져 주셔서 감사합니다. 참여에 앞서 아래 설명문 및 동의서를 읽어 보시기 바랍니다.
@@ -135,7 +135,7 @@
     <div>
 
 <br><br>
-<p class='block-text'> 이 실험에서 귀하는 4초 이내의 짧은 음성 파일들을 클릭해 한국어 발화들을 듣게 될 것입니다. 각 발화 내용을 들은 후 그 발화를 어떻게 해석하였는지에 대해 답변해 주십시오 (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 추가 질문에 답하셔도 됩니다). 귀하는 총 20개의 발화들을 듣게 될 것입니다. </p>
+<p class='block-text'> 이 실험에서 귀하는 4초 이내의 짧은 음성 파일들을 클릭해 한국어 발화들을 듣게 될 것입니다. 각 발화 내용을 들은 후 그 발화를 어떻게 해석하였는지에 대해 답변해 주십시오 (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 추가 질문에 답하셔도 됩니다). 귀하는 총 20개의 발화들을 듣게 될 것입니다.</p>
 
 <p class='block-text'> 설문은 인터넷이 가능한 모든 장소에서 참여가 가능합니다. 다만 집중해서 음성파일들을 들으실 수 있게 조용한 곳에서 헤드폰이나 이어폰을 착용하시고 설문을 진행하시길 권장 드립니다. 참여하시는 순간부터 모든 데이터는 자동으로 저장됩니다. 모든 문항에 차례로 응답하여야 다음 순서로 넘어갈 수 있으며 마지막 문항까지 모두 응답하셔야 데이터 분석에 사용가능합니다. 발화 해석/판단 설문 이후 끝에 간단히 귀하의 성별, 연령, 구사하는 언어 및 출신지역을 여쭙는 간단한 설문이 진행 될 것입니다. </p>
 
@@ -174,13 +174,19 @@
 
 <form id='responseForm2'>
 
-<p class='block-text2'>Q: 위에서 들으신 <span class='currentName1'>{{}}</span>의 발화를 고려했을때, <span class='currentName1'>{{}}</span>는 다음 사항에 대해 얼마나 확신한다고 생각하십니까? 1점 (전혀 확신하지 않음) - 7점 (매우 확신함) 사이의 점수를 매겨
+<p class='block-text2'>Q: 위에서 들으신 발화를 고려했을때, 화자인 <span class='currentName1'>{{}}</span>는 다음 사항이 사실일 것이라고 얼마나 확신한다고 생각하십니까?
+</p>
+
+<br>
+
+<p style="text-align: center; font-size: 80%;">
+1점 (전혀 확신하지 않음) - 7점 (매우 확신함) 사이의 점수를 매겨
 주십시오.
 </p>
 
 <p class='center-text'>
-    화자인 <span class='currentName1'>{{}}</span>는 다음을 확신한다: <br> 
-    <span class='veriProposition'>{{}}</span>.
+    <!-- 화자인 <span class='currentName1'>{{}}</span>는 다음을 확신한다: <br>  -->
+    <span class='veriProposition' style="font-size: 120%;">{{}}</span>.
 </p>
 
 <table align='center' style="width: 640;">
