--- a/experiment2/veri-exp2-ecpq.html
+++ b/experiment2/veri-exp2-ecpq.html
@@ -6,19 +6,19 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 <!-- FOR MTURK -->
-<script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey.0.5.js"></script> 
+<!-- <script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey.0.5.js"></script>  -->
 
 <!-- FOR PHP DATA GATHERING -->
-<!-- <script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey-extension.js"></script>  -->
+<script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey-extension.js"></script> 
 
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
-<script src="veri-exp3.js"></script>
+<script src="veri-exp2.js"></script>
 
 <link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link>
 
-<link href ="veri-exp3.css" rel="stylesheet" type="text/css"/>
+<link href ="veri-exp2.css" rel="stylesheet" type="text/css"/>
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
@@ -36,7 +36,7 @@
     <div>
 
 <br>
-<img src="SNU-logo.png" alt="Seoul National University" width="240">
+<img src="https://sunwooj.github.io/veridicality/experiments-shared/SNU-logo.png" alt="Seoul National University" width="240">
 <br><br>
 <p class='block-text2'>
 안녕하세요! 실험에 관심을 가져 주셔서 감사합니다. 참여에 앞서 아래 설명문 및 동의서를 읽어 보시기 바랍니다.
@@ -135,7 +135,7 @@
     <div>
 
 <br><br>
-<p class='block-text'> 이 실험에서 귀하는 4초 이내의 짧은 음성 파일들을 클릭해 한국어 발화들을 듣게 될 것입니다. 각 발화 내용을 들은 후 그 발화를 어떻게 해석하였는지에 대해 묻는 두 개의 질문에 답변해 주십시오 (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 추가 질문에 답하셔도 됩니다). 귀하는 총 8개의 발화들을 듣게 될 것입니다. </p>
+<p class='block-text'> 이 실험에서 귀하는 4초 이내의 짧은 음성 파일들을 클릭해 한국어 발화들을 듣게 될 것입니다. 각 발화 내용을 들은 후 그 발화를 어떻게 해석하였는지에 대해 답변해 주십시오 (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 추가 질문에 답하셔도 됩니다). 귀하는 총 20개의 발화들을 듣게 될 것입니다.</p>
 
 <p class='block-text'> 설문은 인터넷이 가능한 모든 장소에서 참여가 가능합니다. 다만 집중해서 음성파일들을 들으실 수 있게 조용한 곳에서 헤드폰이나 이어폰을 착용하시고 설문을 진행하시길 권장 드립니다. 참여하시는 순간부터 모든 데이터는 자동으로 저장됩니다. 모든 문항에 차례로 응답하여야 다음 순서로 넘어갈 수 있으며 마지막 문항까지 모두 응답하셔야 데이터 분석에 사용가능합니다. 발화 해석/판단 설문 이후 끝에 간단히 귀하의 성별, 연령, 구사하는 언어 및 출신지역을 여쭙는 간단한 설문이 진행 될 것입니다. </p>
 
@@ -162,8 +162,8 @@
 <!-- Audio stimulus1 displayed here -->
 <form id='audioDisplay1'>
 <br>
-화자인 <span style="font-weight: bold;" class='currentName1'>{{}}</span>는 
-<!-- 공통 지인인 <span class='currentName2'>{{}}</span>에 대해  -->
+화자인 <span style="font-weight: bold;" class='currentName1'>{{}}</span>는  
+<!-- 지인인 <span class='currentName2'>{{}}</span>에 대해  -->
 다음과 같이 말했습니다: 
 <br><br>
 <audio id="currentAudio1" controls=""><source src="#" type="audio/wav"></audio>
@@ -173,120 +173,23 @@
 
 
 
+<form id='responseForm2'>
 
-<form id='responseForm1'>
-
-<!-- <p class='block-text2'>Q1: 위에서 들으신 <span class='currentName1'>{{}}</span>의 발화를 어떻게 해석하셨습니까? 둘 중 더 적절한 해석을 골라주세요.
-</p> -->
-
-<p class='block-text2'>Q1: 위에서 들으신 <span class='currentName1'>{{}}</span>의 발화에 따르면, <span class='currentName2'>{{}}</span>가 <span class='currentVerb1'>{{}}</span>, 혹은 <span class='currentVerb2'>{{}}</span> 것은 무엇입니까? 
-</p>
-
-<div id='PQoption' class='block-text2'>
-
-<label>
-    <input type='radio' class='ctyperes' name='ctyperes' id='optP' value='P' /> 
-    <strong>
-        &nbsp;&nbsp;
-        &ldquo;<span class='Pint'>{{}}</span>&rdquo;라는 사실 혹은 생각
-    </strong>
-</label>
-
-<label>
-    <input type='radio' class='ctyperes' name='ctyperes' id='optQ' value='Q' /> 
-    <strong>
-        &nbsp;&nbsp;
-        &ldquo;<span class='Qint'>{{}}</span>&rdquo;라는 질문에 대한 대답
-    </strong>
-</label>
-
-</div>
-
-</form>
-
-
-<button type='button' id='nextstage'>다음 질문으로 계속</button>
-
-
-<form id='responseForm2a'>
-
-<br>
-
-<p class='block-text2'>Q2: 위에서 들으신 발화를 고려했을때,
+<p class='block-text2'>Q: 위에서 들으신 발화를 고려했을때, 
 <span style="font-weight: bold;" class='currentName1'>{{}}</span>는 다음 사항이 사실일 것이라고 얼마나 확신한다고 생각하십니까?
 </p>
 
 
 <p style="text-align: center; font-size: 80%;">
-    1점 (전혀 확신하지 않음) - 7점 (매우 확신함) 사이의 점수를 매겨 주십시오.
+&lsquo;1점: 사실일 것이라 전혀 확신하지 않음 (사실이 아닐 것이라 생각함)&rsquo; 에서 <br> &lsquo;7점: 사실일 것이라 매우 확신함&rsquo; 사이의 점수를 매겨 주십시오.
+</span>
 </p>
+
 
 
 <p class='center-text'>
-    <span class='pveriProposition' style="font-size: 120%;">{{}}</span>.
-</p>
-
-<table align='center' style="width: 640;">
-    <tr>
-        <td style="text-align: left; font-size: 80%;" colspan="3"> (전혀 확신하지 않음) </td>
-        <td> </td>
-        <td> </td>
-        <td> </td>
-        <td> </td>
-        <td> </td>
-        <td style="text-align: right; font-size: 80%;" colspan="2"> (매우 확신함) </td>
-    </tr>
-    <tr>
-        <th> </th>
-        <th> </th>
-        <th> 1 </th>
-        <th> 2 </th>
-        <th> 3 </th>
-        <th> 4 </th>
-        <th> 5 </th>
-        <th> 6 </th>
-        <th> 7 </th>
-        <th> </th>
-    </tr>
-    <tr>
-        <td> </td>
-        <td> </td>
-        <td><input type="radio" class="radio" name="veridicality" value="1" /></td>
-        <td><input type="radio" class="radio" name="veridicality" value="2" /></td>
-        <td><input type="radio" class="radio" name="veridicality" value="3" /></td>
-        <td><input type="radio" class="radio" name="veridicality" value="4" /></td>
-        <td><input type="radio" class="radio" name="veridicality" value="5" /></td>
-        <td><input type="radio" class="radio" name="veridicality" value="6" /></td>
-        <td><input type="radio" class="radio" name="veridicality" value="7" /></td>
-        <td> </td>
-    </tr>
-</table>
-
-</form>
-
-
-
-
-
-<form id='responseForm2b'>
-
-<br>
-
-<p class='block-text2'>Q2:
-    <span class='qSitu'>{{}}</span>,
-    화자인 <span class='currentName1'>{{}}</span>는 이 사실을 압니다.
-    위에서 들으신 <span class='currentName1'>{{}}</span>의 발화를 고려했을때,
-    <span class='currentName1'>{{}}</span>는 다음 사항에 대해 얼마나 확신한다고 생각하십니까?
-</p>
-
-<p style="text-align: center; font-size: 80%;">
-    1점 (전혀 확신하지 않음) - 7점 (매우 확신함) 사이의 점수를 매겨 주십시오.
-</p>
-
-<p class='center-text' style="font-size: 120%;">
-    <span class='currentName2'>{{}}</span>는
-    <span class='qveriProposition'>{{}}</span>는 
-    사실을 <span class='currentVerb'>{{}}</span>.
+    <!-- 화자인 <span class='currentName1'>{{}}</span>는 다음을 확신한다: <br>  -->
+    <span class='veriProposition' style="font-size: 120%;">{{}}</span>.
 </p>
 
 <table align='center' style="width: 640;">
@@ -333,14 +236,9 @@
 
 
 <!-- Optional responses -->
-<form id='optionalForm'>
-
-<p id='optional1' class='block-text2'>[선택 답변] 그 밖에 이 문제들에 관해 하시고 싶으신 말씀이 있으십니까?</p>
+<p id='optional1' class='block-text2'>[선택 답변] 그 밖에 위 녹음이나 문제에 관해 하시고 싶으신 말씀이 있으십니까?</p>
 
 <input type='text' id="commentBox1" class="commentBox" style="width: 400px;" value="" />
-
-</form>
-
 
 
 <!-- Warning message in case any of Q1-Q2 doesn't get a response -->
@@ -350,7 +248,7 @@
 <button type='button' id='continue'>다음 질문으로 계속</button>
 
 
-<p><span style="font-weight: bold; color: #8C1515;"> 음성 파일 20개 중 <span class="item_number">{{}}</span> 번째</span></p>
+<!-- <p><span style="font-weight: bold; color: #8C1515;"> 음성 파일 20개 중 <span class="item_number">{{}}</span> 번째</span></p> -->
 
         </div>
     </div>
@@ -434,7 +332,7 @@
 
 
 <form id='contactForm'>
-<p class='questionSent'>6. 만일 사례품(스타벅스 기프티콘)을 아직 받지 않으셨다면, 사례품 전송을 위해 귀하의 휴대폰 번호가 필요합니다. 이 번호는 기프티콘 처리 확인 후 즉시 폐기되고 제 3자와 공유되지 않습니다. 만일 사례품을 이미 받으셨다면 추후 기프티콘이 추가 제공되는 다른 실험에 참여 의사가 있으신지 간단히 의향을 남겨주시면 감사하겠습니다. (참여 의사를 표명하셨어도 그 때 가서 실험의 성격 및 본인의 일정에 따라 참여 여부를 자유로이
+<p class='questionSent'>6. 6. 만일 사례품(스타벅스 기프티콘)을 아직 받지 않으셨다면, 사례품 전송을 위해 귀하의 휴대폰 번호가 필요합니다. 이 번호는 기프티콘 처리 확인 후 즉시 폐기되고 제 3자와 공유되지 않습니다. 만일 사례품을 이미 받으셨다면 추후 기프티콘이 추가 제공되는 다른 실험에 참여 의사가 있으신지 간단히 의향을 남겨주시면 감사하겠습니다. (참여 의사를 표명하셨어도 그 때 가서 실험의 성격 및 본인의 일정에 따라 참여 여부를 자유로이
 변경하실 수 있습니다.)
 <br>
 <input type='text' id='contact' value="" />
