--- a/experiment3/veri-exp3-qed-ver1.html
+++ b/experiment3/veri-exp3-qed-ver1.html
@@ -14,7 +14,7 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
-<script src="veri-exp3.js"></script>
+<script src="veri-exp3-ver1.js"></script>
 
 <link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link>
 
@@ -135,7 +135,7 @@
     <div>
 
 <br><br>
-<p class='block-text'> 이 실험에서 귀하는 4초 이내의 짧은 음성 파일들을 클릭해 한국어 발화들을 듣게 될 것입니다. 각 발화 내용을 들은 후 그 발화를 어떻게 해석하였는지에 대해 묻는 두 개의 질문에 답변해 주십시오 (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 추가 질문에 답하셔도 됩니다). 귀하는 총 8개의 발화들을 듣게 될 것입니다. </p>
+<p class='block-text'> 이 실험에서 귀하는 4초 이내의 짧은 음성 파일들을 클릭해 한국어 발화들을 듣게 될 것입니다. 각 발화 내용을 들은 후 그 발화를 어떻게 해석하였는지에 대해 묻는 두 개의 질문에 답변해 주십시오 (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 추가 질문에 답하셔도 됩니다). 귀하는 총 14개의 발화들을 듣게 될 것입니다. </p>
 
 <p class='block-text'> 설문은 인터넷이 가능한 모든 장소에서 참여가 가능합니다. 다만 집중해서 음성파일들을 들으실 수 있게 조용한 곳에서 헤드폰이나 이어폰을 착용하시고 설문을 진행하시길 권장 드립니다. 참여하시는 순간부터 모든 데이터는 자동으로 저장됩니다. 모든 문항에 차례로 응답하여야 다음 순서로 넘어갈 수 있으며 마지막 문항까지 모두 응답하셔야 데이터 분석에 사용가능합니다. 발화 해석/판단 설문 이후 끝에 간단히 귀하의 성별, 연령, 구사하는 언어 및 출신지역을 여쭙는 간단한 설문이 진행 될 것입니다. </p>
 
@@ -163,8 +163,7 @@
 <form id='audioDisplay1'>
 <br>
 화자인 <span style="font-weight: bold;" class='currentName1'>{{}}</span>는 
-<!-- 공통 지인인 <span class='currentName2'>{{}}</span>에 대해  -->
-다음과 같이 말했습니다: 
+공통 지인인 <span class='currentName2'>{{}}</span>에 대해 다음과 같이 말했습니다: 
 <br><br>
 <audio id="currentAudio1" controls=""><source src="#" type="audio/wav"></audio>
 <br><br>
@@ -179,7 +178,7 @@
 <!-- <p class='block-text2'>Q1: 위에서 들으신 <span class='currentName1'>{{}}</span>의 발화를 어떻게 해석하셨습니까? 둘 중 더 적절한 해석을 골라주세요.
 </p> -->
 
-<p class='block-text2'>Q1: 위에서 들으신 <span class='currentName1'>{{}}</span>의 발화에 따르면, <span class='currentName2'>{{}}</span>가 <span class='currentVerb1'>{{}}</span>, 혹은 <span class='currentVerb2'>{{}}</span> 것은 무엇입니까? 
+<p class='block-text2'>Q1: 위에서 들으신 <span class='currentName1'>{{}}</span>의 발화를 어떻게 해석하셨습니까? 둘 중 더 적절한 해석을 골라주세요.
 </p>
 
 <div id='PQoption' class='block-text2'>
@@ -187,17 +186,20 @@
 <label>
     <input type='radio' class='ctyperes' name='ctyperes' id='optP' value='P' /> 
     <strong>
-        &nbsp;&nbsp;
-        &ldquo;<span class='Pint'>{{}}</span>&rdquo;라는 사실 혹은 생각
+        [문장식 해석] <br>
+        <span class='currentName2'>{{}}</span>는 
+        <span class='Pint'>{{}}</span>라고 
+        <span class='currentVerb1'>{{}}</span>.
     </strong>
 </label>
 
 <label>
     <input type='radio' class='ctyperes' name='ctyperes' id='optQ' value='Q' /> 
     <strong>
-        &nbsp;&nbsp;
-        &ldquo;<span class='Qint'>{{}}</span>&rdquo;라는 질문에 대한 대답
-    </strong>
+        [질문식 해석] <br>
+        <span class='currentName2'>{{}}</span>는
+        <span class='Qint'>{{}}</span>을 
+        <span class='currentVerb2'>{{}}</span>.</strong>
 </label>
 
 </div>
