--- a/experiment3/veri-exp3-qed-ver1.html
+++ b/experiment3/veri-exp3-qed-ver1.html
@@ -163,7 +163,8 @@
 <form id='audioDisplay1'>
 <br>
 화자인 <span style="font-weight: bold;" class='currentName1'>{{}}</span>는 
-공통 지인인 <span class='currentName2'>{{}}</span>에 대해 다음과 같이 말했습니다: 
+<!-- 공통 지인인 <span class='currentName2'>{{}}</span>에 대해  -->
+다음과 같이 말했습니다: 
 <br><br>
 <audio id="currentAudio1" controls=""><source src="#" type="audio/wav"></audio>
 <br><br>
@@ -186,7 +187,6 @@
 <label>
     <input type='radio' class='ctyperes' name='ctyperes' id='optP' value='P' /> 
     <strong>
-        [문장식 해석] <br>
         <span class='currentName2'>{{}}</span>는 
         <span class='Pint'>{{}}</span>라고 
         <span class='currentVerb1'>{{}}</span>.
@@ -196,7 +196,6 @@
 <label>
     <input type='radio' class='ctyperes' name='ctyperes' id='optQ' value='Q' /> 
     <strong>
-        [질문식 해석] <br>
         <span class='currentName2'>{{}}</span>는
         <span class='Qint'>{{}}</span>을 
         <span class='currentVerb2'>{{}}</span>.</strong>
