--- a/experiment3/veri-exp3-qed.html
+++ b/experiment3/veri-exp3-qed.html
@@ -14,7 +14,7 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
-<script src="veri-exp3.js"></script>
+<script src="veri-exp3.js" charset="utf-8"></script>
 
 <link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link>
 
