Pilot tests updated

--- a/experiment1/veri-exp1-ucdec.html
+++ b/experiment1/veri-exp1-ucdec.html
@@ -14,7 +14,7 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
-<script src="veri-exp1.js"></script>
+<script src="veri-exp1-friends.js"></script>
 
 <link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link>
 
@@ -281,6 +281,7 @@
 </form>
 
 
+
 <form id='ageForm'>
 <p class='questionSent'> 2. 귀하의 나이는 어떻게 되십니까?
 <br>
@@ -291,7 +292,6 @@
 <input type='radio' class='age' name='ageC' id='60s' value='60s' /> 60대 이상 <br>
 </p>
 </form>
-
 
 
 
@@ -310,14 +310,12 @@
 
 
 
-
 <form id='ethnicityForm'>
 <p class='questionSent'> 4. 귀하께서 한국어 이외에 구사하시는 언어가 있으십니까? 있으시다면 구사하시는 언어들을 모두 적어주시기 바랍니다.
 <br>
 <input type='text' id='lang_com' value="" />
 </p>
 </form>
-
 
 
 
@@ -330,13 +328,24 @@
 
 
 
-
 <form id='contactForm'>
-<p class='questionSent'>6. 만일 사례품(스타벅스 기프티콘)을 아직 받지 않으셨다면, 사례품 전송을 위해 귀하의 휴대폰 번호가 필요합니다. 이 번호는 기프티콘 처리 확인 후 즉시 폐기되고 제 3자와 공유되지 않습니다. 만일 사례품을 이미 받으셨다면 추후 기프티콘이 추가 제공되는 다른 실험에 참여 의사가 있으신지 간단히 의향을 남겨주시면 감사하겠습니다. (참여 의사를 표명하셨어도 그 때 가서 실험의 성격 및 본인의 일정에 따라 참여 여부를 자유로이 변경하실 수 있습니다.)
+<p class='questionSent'>6. 사례품 전송 확인을 위해 귀하 혹은 기프티콘 수령자분의 휴대폰 번호가 필요합니다. 기프티콘을 수령하셨거나 앞으로 수령하실 분의 휴대폰 번호를 아래에 남겨주십시오. 이 번호는 기프티콘 처리 확인 후 즉시 폐기되고 제 3자와 공유되지 않습니다. 
 <br>
 <input type='text' id='contact' value="" />
 </p>
 </form>
+
+
+
+<form id='subjectpoolForm'>
+<p class='questionSent'> 7. (다른 실험에서 이미 답변하셨을 경우 재답변 하실 필요 없습니다.) 추후 기프티콘 혹은 상품권 (한국에서만 이용 가능)이 사례품으로 제공되는 다른 언어학 실험들에 참여하실 의사가 있으신가요? 참여 의사가 있으시다면 추후 참여자 모집 공고를 수령하시고 싶으신 연락처를 남겨 주시기 바랍니다. (외국 거주자의 경우 본인이 참여하시고 사례품은 한국에 계신 제 3자에게 선물로 전달하는 방식도 가능합니다.) 지금 관심을 표명하셨어도 추후에 언제든 모집 공고 수령을 중단하실 수 있습니다. 남겨주신 연락처는 본 책임연구자(정선우)의 실험 참여자 모집 용도로만 사용되고 절대 제 3자와 공유되지 않으며, 공고 수령 중단을 요청하셨을때 영구 폐기됩니다.
+<br>
+<input type='radio' class='pool' name='poolC' id='yesphone' value='Yes' /> 추후 참여 의사 있음; 휴대폰으로 연락 바람: <input type='text' name='cell' id='cell_com' /> <br>
+<input type='radio' class='pool' name='poolC' id='yesmail' value='Yes' /> 추후 참여 의사 있음; 이메일로 연락 바람: <input type='text' name='mail' id='mail_com' /> <br>
+<input type='radio' class='pool' name='poolC' id='nbgen' value='No' /> 추후 참여 의사 없음 
+</p>
+</form>
+
 
 
 </form>
@@ -352,9 +361,9 @@
 </div>
 
 
-<div class='slide' id='finish'>
+<!-- <div class='slide' id='finish'>
 <p>실험이 끝났습니다. 참여해 주셔서 매우 감사합니다! </p>
-</div>
+</div> -->
 
 </body>
 </html>
