--- a/experiment-salt/veri-pilot-demo.html
+++ b/experiment-salt/veri-pilot-demo.html
@@ -14,7 +14,7 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
-<script src="veridicality-pilot1-demo.js"></script>
+<script src="veri-pilot-demo.js"></script>
 
 <link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link>
 
