--- a/experiment3/veri-exp3-conttext-demo.html
+++ b/experiment3/veri-exp3-conttext-demo.html
@@ -11,7 +11,7 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
-<script src="veri-exp3-test.js"></script>
+<script src="veri-exp3-demo.js"></script>
 
 <link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link>
 
