Updated form wordings

--- a/experiment-salt/veri-pilot-demo.html
+++ b/experiment-salt/veri-pilot-demo.html
@@ -5,15 +5,13 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-<!-- FOR MTURK -->
-<script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey.0.5.js"></script> 
-
 <!-- FOR PHP DATA GATHERING -->
-<!-- <script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey-extension2.js"></script>  -->
+<script type="text/javascript" src="https://sunwoojeong.com/experiments/experiments-shared/server-extension.js"></script>
 
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
+<!-- Main script -->
 <script src="veri-pilot-demo.js"></script>
 
 <link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link>
@@ -43,7 +41,7 @@
 </p>
 
 <p class='scrollbox'>
-<span class='center-text'> 설명문 </span> 
+<span class='center-text'> 연구참여자용 설명문 </span> 
 <br><br>
 연구 과제명 : 한국어 억양이 동사 해석에 미치는 영향 <br>
 연구 책임자명 : 정선우 (인문대학 언어학과 조교수)
@@ -116,7 +114,7 @@
 
 <form class='center-text'>
 본 연구에 참여하시겠습니까?
-    <input type='checkbox' id='consent' name='consent' value='1'> 예 
+    <input type='checkbox' id='consent' name='consent' value='1'> 예 &nbsp;&nbsp;
     <input type='checkbox' id='noconsent' name='consent' value='0'> 아니오
 </form>
 
