--- a/experiment-glossa/veri-glossa-qed-demo.html
+++ b/experiment-glossa/veri-glossa-qed-demo.html
@@ -11,7 +11,7 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
-<script src="veri-exp2-demo.js" charset="utf-8"></script>
+<script src="veri-glossa-demo.js" charset="utf-8"></script>
 
 <!-- <link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link> -->
 
