--- a/experiment2b/veri-exp2b-contaudi.html
+++ b/experiment2b/veri-exp2b-contaudi.html
@@ -15,7 +15,7 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
-<script src="veri-exp4.js"></script>
+<script src="veri-exp2b.js"></script>
 
 <link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link>
 
