--- a/experiment-salt/veri-pilot-demo.html
+++ b/experiment-salt/veri-pilot-demo.html
@@ -37,7 +37,7 @@
 <img src="https://sunwooj.github.io/veridicality/experiments-shared/SNU-logo.png" alt="Seoul National University" width="240">
 <br><br>
 <p class='block-text2'>
-안녕하세요! 실험에 관심을 가져 주셔서 감사합니다. 참여에 앞서 아래 설명문 및 동의서를 읽어 보시기 바랍니다.
+안녕하세요! 실험에 관심을 가져 주셔서 감사합니다. 참여에 앞서 아래 설명문 및 동의서를 스크롤을 내리시면서 끝까지 읽어 보시기 바랍니다.
 </p>
 
 <p class='scrollbox'>
@@ -133,7 +133,7 @@
     <div>
 
 <br><br>
-<p class='block-text'> 이 실험에서 귀하는 4초 이내의 짧은 음성 파일들을 클릭해 한국어 발화들을 듣게 될 것입니다. 각 발화 내용을 들은 후 들은 발화가 자연스러운지, 또 그 발화를 어떻게 해석하였는지에 대해 답변해 주십시오. 각 발화 당 총 두 개의 질문들에 답하실 것이며 총 64개의 발화들을 듣게 될 것입니다 (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 기입하는 세 번째 질문에 답하셔도 됩니다). </p>
+<p class='block-text'> 이 실험에서 귀하는 4초 이내의 짧은 음성 파일들을 클릭해 한국어 발화들을 듣게 될 것입니다. 각 발화 내용을 들은 후 들은 발화가 자연스러운지, 또 그 발화를 어떻게 해석하였는지에 대해 답변해 주십시오. 각 발화 당 총 두 개의 질문들에 답하실 것이며 <u>총 46개의 발화들을 듣게 될 것입니다</u> (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 기입하는 세 번째 질문에 답하셔도 됩니다). </p>
 
 <p class='block-text'> 설문은 인터넷이 가능한 모든 장소에서 참여가 가능합니다. 다만 집중해서 음성파일들을 들으실 수 있게 조용한 곳에서 헤드폰이나 이어폰을 착용하시고 설문을 진행하시길 권장 드립니다. 참여하시는 순간부터 모든 데이터는 자동으로 저장됩니다. 모든 문항에 차례로 응답하여야 다음 순서로 넘어갈 수 있으며 마지막 문항까지 모두 응답하셔야 데이터 분석에 사용가능합니다. 발화 해석/판단 설문 이후 끝에 간단히 귀하의 성별, 연령, 구사하는 언어 및 출신지역을 여쭙는 간단한 설문이 진행 될 것입니다. </p>
 
@@ -301,7 +301,7 @@
 <form id='languageForm'>
 
 <p class='questionSent'> 
-본 실험이 끝났습니다. 끝으로 아래 설문을 간단히 작성해 주시기 바랍니다. 설문 뒤 실험 끝내기를 클릭하시면 나타나는 회색 바탕의 실험 결과를 전체 선택 하셔서 복사하신 뒤 sunwooj@snu.ac.kr 로 보내주시기 바랍니다.
+본 실험이 끝났습니다. 실험을 마치시기 위해 아래 설문을 간단히 작성해 주시기 바랍니다. 
 </p> <br>
 
 <!-- 
@@ -355,13 +355,13 @@ Please list any other languages that you speak fluently.
 <form id='regionForm'>
 <p class='questionSent'> 3. 귀하께서 5세-20세 사이 가장 오래 거주하신 지역이 어디이십니까?
 <br>
-<input type='radio' class='reg' name='regC' id='nonus' value='nonUS' /> 서울/경기 <br>
-<input type='radio' class='reg' name='regC' id='o48s' value='non48' /> 전남/전북 <br>
-<input type='radio' class='reg' name='regC' id='neweng' value='NE' /> 경남/경북 <br>
-<input type='radio' class='reg' name='regC' id='midatl' value='MA' /> 충남/충북 <br>
-<input type='radio' class='reg' name='regC' id='midw' value='MW' /> 강원도 <br>
-<input type='radio' class='reg' name='regC' id='appal' value='SO' /> 제주도 <br>
-<input type='radio' class='reg' name='regC' id='rego' value='OT' /> 외국:  <input type='text' name='eth' id='reg_com' /><br>
+<input type='radio' class='reg' name='regC' id='nonus' value='seoul' /> 서울/경기 <br>
+<input type='radio' class='reg' name='regC' id='o48s' value='jeolla' /> 전남/전북 <br>
+<input type='radio' class='reg' name='regC' id='neweng' value='gyeongsang' /> 경남/경북 <br>
+<input type='radio' class='reg' name='regC' id='midatl' value='chungcheong' /> 충남/충북 <br>
+<input type='radio' class='reg' name='regC' id='midw' value='gangwon' /> 강원도 <br>
+<input type='radio' class='reg' name='regC' id='appal' value='jeju' /> 제주도 <br>
+<input type='radio' class='reg' name='regC' id='rego' value='nonkor' /> 외국:  <input type='text' name='eth' id='reg_com' /><br>
 </p>
 </form>
 
