--- a/experiment2b/veri-exp2b-contaudi.html
+++ b/experiment2b/veri-exp2b-contaudi.html
@@ -40,7 +40,7 @@
 <img src="https://sunwooj.github.io/veridicality/experiments-shared/SNU-logo.png" alt="Seoul National University" width="240">
 <br><br>
 <p class='block-text2'>
-안녕하세요! 실험에 관심을 가져 주셔서 감사합니다. 참여에 앞서 아래 설명문 및 동의서를 읽어 보시기 바랍니다.
+안녕하세요! 실험에 관심을 가져 주셔서 감사합니다. 참여에 앞서 아래 설명문 및 동의서를 스크롤을 내리시면서 끝까지 읽어 보시기 바랍니다.
 </p>
 
 <p class='scrollbox'>
@@ -61,11 +61,18 @@
 <br><br>
 3. 만일 연구에 참여하면 어떤 과정이 진행됩니까?
 <br>
-만일 귀하가 참여의사를 밝혀 주시면 다음과 같은 과정이 진행될 것입니다. 온라인상에서의 참여의사를 밝혀주시면 귀하는 4초 이내의 짧은 음성 파일들을 클릭해 한국어 발화들을 듣게 될 것입니다. 각 발화 내용을 들은 후 들은 발화가 자연스러운지, 또 그 발화를 어떻게 해석하였는지에 대해 답변하는 설문이 진행될 것입니다. 각 발화 당 총 두 개의 질문들에 답하실 것이며 총 46개의 발화들을 듣게 될 것입니다 (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 기입하는 세 번째 질문에 답하셔도 됩니다). 설문은 귀하가 원하는 인터넷이 가능한 모든 장소에서 참여가 가능합니다. 다만 집중해서 음성파일들을 들으실 수 있게 조용한 곳에서 헤드폰이나 이어폰을 착용하시고 설문을 진행하시길 권장 드립니다. 참여하시는 순간부터 모든 데이터는 자동으로 저장됩니다. 모든 문항에 차례로 응답하여야 다음 순서로 넘어갈 수 있으며 마지막 문항까지 모두 응답하셔야 데이터 분석에 사용가능합니다. 만약 중간에 응답을 원하지 않으시면 언제라도 바로 중지하실 수 있으시며 원하시면 언제든지 중지하셔도 됩니다. 설문 중지에 따른 불이익은 전혀 발생되지 않으며 중단하실 경우 모든 데이터는 바로 자동 삭제되어 데이터에 포함되지 않습니다. 발화 해석/판단 설문 이후 끝에 간단히 귀하의 성별, 연령, 구사하는 언어 및 출신지역을 여쭙는 간단한 설문이 진행 될 것입니다. 끝으로 사례금 지급을 위한 귀하의 연락처 수집이 있겠습니다. 연락처는 사례금 직후 파기되며 제3자와 공유되지 않습니다.
+만일 귀하가 참여의사를 밝혀 주시면 다음과 같은 과정이 진행될 것입니다. 온라인상에서의 참여의사를 밝혀주시면 귀하는 4초 이내의 짧은 음성 파일들을 클릭해 한국어 발화들을 듣게 되거나, 맥락과 함께 주어지는 짧은
+한국어 발화 내용들을 읽게 될 것입니다. 각 발화 내용을 듣거나 읽으신 후 그 발화를 어떻게 해석하였는지에 대해 답변하는 설문이 진행될 것입니다. 실험에 따라 각 발화 당 최대 두 개의 질문들에 답하실 것이며 최대
+64개의 발화들을 듣게 될 것입니다 (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 기입하는 세 번째 질문에 답하셔도 됩니다). 설문은 귀하가 원하는 인터넷이 가능한 모든 장소에서 참여가
+가능합니다. 다만 집중해서 음성파일들을 들으실 수 있게 조용한 곳에서 헤드폰이나 이어폰을 착용하시고 설문을 진행하시길 권장 드립니다. 참여하시는 순간부터 모든 데이터는 자동으로 저장됩니다. 모든 문항에 차례로
+응답하여야 다음 순서로 넘어갈 수 있으며 마지막 문항까지 모두 응답하셔야 데이터 분석에 사용가능합니다. 만약 중간에 응답을 원하지 않으시면 언제라도 바로 중지하실 수 있으시며 원하시면 언제든지 중지하셔도 됩니다.
+설문 중지에 따른 불이익은 전혀 발생되지 않으며 중단하실 경우 모든 데이터는 바로 자동 삭제되어 데이터에 포함되지 않습니다. 발화 해석/판단 설문 이후 끝에 간단히 귀하의 성별, 연령, 구사하는 언어 및 출신지역을
+여쭙는 간단한 설문이 진행 될 것입니다. 설문 대행 플랫폼인 크라우드웍스를 통해 참여하시는 경우 포인트 지급을 위한 귀하의 크라우드웍스 계정정보 수집이 있겠습니다. 기타 방법을 통해 참여를 하시는 경우 사례금
+(기프티콘) 지급을 위한 귀하의 연락처 수집이 있겠습니다. 계정정보 혹은 연락처는 포인트 혹은 사례금 지급 직후 파기되며 제3자와 공유되지 않습니다.
 <br><br>
 4. 연구 참여 기간은 얼마나 됩니까?
 <br>
-약 20분이 소요될 것입니다.
+실험에 따라 약 10-20분이 소요될 것입니다. 다음 페이지에서 보다 자세한 소요 예상시간 안내가 있겠습니다.
 <br><br>
 5. 참여 도중 그만두어도 됩니까?
 <br>
@@ -85,13 +92,13 @@
 <br><br>
 9. 연구에서 얻은 모든 개인 정보의 비밀은 보장됩니까?
 <br>
-개인정보관리책임자는 서울대학교의 정선우 (02-880-9039)입니다. 본 연구에서 수집되는 개인정보는 성별, 연령, 출신 지역, 구사하는 언어, 그리고 사례비 지급을 위한 휴대폰 번호입니다. (그러나 본인이 원하실 경우 휴대폰 번호를 제외한 개인정보는 제공하지 않고 문장 해석 질문들에만 답할 수 있습니다.) 이러한 개인정보는 연구책임자 정선우와 보조연구원 김지영에게만 접근이 허락 되며, 잠금장치가 된 PC에 엑셀 및 .csv 형태로 저장하여 보관될 것입니다. 개인식별정보인 휴대폰 번호는 사례비 지급 이후, 즉각 폐기합니다. 그 외 정보는 서울대학교 연구윤리 지침에 따라 가능한 한 영구 보관할 예정입니다. 저희는 이 연구를 통해 얻은 모든 개인 정보의 비밀 보장을 위해 최선을 다할 것입니다. 이 연구에서 얻어진 개인 정보가 학회지나 학회에 공개 될 때 귀하의 이름 및 기타 개인 정보는 사용되지 않을 것입니다. 그러나 만일 법이 요구하면 귀하의 개인정보는 제공될 수도 있습니다. 또한 모니터 요원, 점검 요원, 생명윤리위원회는 연구참여자의 개인 정보에 대한 비밀 보장을 침해하지 않고 관련규정이 정하는 범위 안에서 본 연구의 실시 절차와 자료의 신뢰성을 검증하기 위해 연구 결과를 직접 열람할 수 있습니다. 귀하가 본 동의서에 서명하는 것은, 이러한 사항에 대하여 사전에 알고 있었으며 이를 허용한다는 동의로 간주될 것입니다.
+개인정보관리책임자는 서울대학교의 정선우 (02-880-9039)입니다. 본 연구에서 수집되는 개인정보는 성별, 연령, 출신 지역, 구사하는 언어, 그리고 사례비 지급을 위한 크라우드웍스 계정정보 혹은 휴대폰 번호입니다. 이러한 개인정보는 연구책임자 정선우와 보조연구원 김지영에게만 접근이 허락 되며, 잠금장치가 된 PC에 엑셀 및 .csv 형태로 저장하여 보관될 것입니다. 개인식별정보인 휴대폰 번호는 사례비 지급 이후, 즉각 폐기합니다. 크라우드웍스 계정정보 또한 포인트 지급 이후, 즉각 폐기합니다. 그 외 정보는 서울대학교 연구윤리 지침에 따라 가능한 한 영구 보관할 예정입니다. 저희는 이 연구를 통해 얻은 모든 개인 정보의 비밀 보장을 위해 최선을 다할 것입니다. 이 연구에서 얻어진 개인 정보가 학회지나
+학회에 공개 될 때 귀하의 이름 및 기타 개인 정보는 사용되지 않을 것입니다. 그러나 만일 법이 요구하면 귀하의 개인정보는 제공될 수도 있습니다. 또한 모니터 요원, 점검 요원, 생명윤리위원회는 연구참여자의 개인 정보에 대한 비밀 보장을 침해하지 않고 관련규정이 정하는 범위 안에서 본 연구의 실시 절차와 자료의 신뢰성을 검증하기 위해 연구 결과를 직접 열람할 수 있습니다. 귀하가 본 동의서에 서명하는 것은, 이러한 사항에 대하여 사전에 알고 있었으며 이를 허용한다는 동의로 간주될 것입니다.
 <br><br>
 10. 이 연구에 참가하면 사례가 지급됩니까?
 <br>
 <!-- 추후 조정 -->
-귀하의 연구 참여시 감사의 뜻으로 스타벅스 커피 기프티콘이 이미 증정되었거나, 앞으로 증정될 것입니다. 
-기프티콘은 귀하의 휴대폰으로 발송됩니다.                   
+귀하의 연구 참여시 감사의 뜻으로 스타벅스 커피 기프티콘 혹은 크라우드웍스 포인트가 증정될 것입니다. 기프티콘을 수령하시는 경우 기프티콘은 귀하의 휴대폰으로 발송됩니다.
 <br><br>
 11. 연구에 대한 문의는 어떻게 해야 됩니까?
 <br>
