--- a/experiment2b/veri-exp2b-contaudi-demo.html
+++ b/experiment2b/veri-exp2b-contaudi-demo.html
@@ -5,21 +5,18 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-<!-- FOR MTURK -->
-<!-- <script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey.0.5.js"></script>  -->
-
 <!-- FOR PHP DATA GATHERING -->
-<script type="text/javascript" src="https://sunwoojeong.com/experiments/experiments-shared/server-extension.js"></script> 
-<!-- <script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey-extension.js"></script>  -->
+<script type="text/javascript" src="https://sunwoojeong.com/experiments/experiments-shared/server-extension.js"></script>
+<!-- <script type="text/javascript" src="https://sunwooj.github.io/experiments-shared/mmturkey-extension.js"></script> -->
 
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
-<script src="veri-exp2b.js"></script>
+<script src="veri-exp2b-demo.js"></script>
 
 <link rel="stylesheet" href="https://sunwooj.github.io/experiments-shared/sliders/jquery-ui.css"></link>
 
-<link href ="https://sunwooj.github.io/veridicality/experiments-shared/veri-exp.css" rel="stylesheet" type="text/css"/>
+<link href ="../veridicality.css" rel="stylesheet" type="text/css"/>
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
@@ -37,7 +34,7 @@
     <div>
 
 <br>
-<img src="https://sunwooj.github.io/veridicality/experiments-shared/SNU-logo.png" alt="Seoul National University" width="240">
+<img src="https://sunwoojeong.com/experiments/experiments-shared/SNU-logo.png" alt="Seoul National University" width="240">
 <br><br>
 <p class='block-text2'>
 안녕하세요! 실험에 관심을 가져 주셔서 감사합니다. 참여에 앞서 아래 설명문 및 동의서를 스크롤을 내리시면서 끝까지 읽어 보시기 바랍니다.
@@ -92,8 +89,14 @@
 <br><br>
 9. 연구에서 얻은 모든 개인 정보의 비밀은 보장됩니까?
 <br>
-개인정보관리책임자는 서울대학교의 정선우 (02-880-9039)입니다. 본 연구에서 수집되는 개인정보는 성별, 연령, 출신 지역, 구사하는 언어, 그리고 사례비 지급을 위한 크라우드웍스 계정정보 혹은 휴대폰 번호입니다. 이러한 개인정보는 연구책임자 정선우와 보조연구원 김지영에게만 접근이 허락 되며, 잠금장치가 된 PC에 엑셀 및 .csv 형태로 저장하여 보관될 것입니다. 개인식별정보인 휴대폰 번호는 사례비 지급 이후, 즉각 폐기합니다. 크라우드웍스 계정정보 또한 포인트 지급 이후, 즉각 폐기합니다. 그 외 정보는 서울대학교 연구윤리 지침에 따라 가능한 한 영구 보관할 예정입니다. 저희는 이 연구를 통해 얻은 모든 개인 정보의 비밀 보장을 위해 최선을 다할 것입니다. 이 연구에서 얻어진 개인 정보가 학회지나
-학회에 공개 될 때 귀하의 이름 및 기타 개인 정보는 사용되지 않을 것입니다. 그러나 만일 법이 요구하면 귀하의 개인정보는 제공될 수도 있습니다. 또한 모니터 요원, 점검 요원, 생명윤리위원회는 연구참여자의 개인 정보에 대한 비밀 보장을 침해하지 않고 관련규정이 정하는 범위 안에서 본 연구의 실시 절차와 자료의 신뢰성을 검증하기 위해 연구 결과를 직접 열람할 수 있습니다. 귀하가 본 동의서에 서명하는 것은, 이러한 사항에 대하여 사전에 알고 있었으며 이를 허용한다는 동의로 간주될 것입니다.
+개인정보관리책임자는 서울대학교의 정선우 (02-880-9039)입니다. <u><span style="font-size:1.2em">본 연구에서 수집되는 개인정보는 성별, 연령, 출신 지역, 구사하는 언어, 그리고 사례비 지급을 위한 크라우드웍스 계정정보 혹은 휴대폰
+번호입니다. 이러한 개인정보는 연구책임자 정선우와 보조연구원 김지영에게만 접근이
+허락 되며, 잠금장치가 된 PC에 엑셀 및 .csv 형태로 저장하여 보관될 것입니다. 개인식별정보인 휴대폰 번호는 사례비 지급 이후, 즉각 폐기합니다. 크라우드웍스 계정정보 또한 포인트 지급 이후, 즉각 폐기합니다.
+그 외 정보는 서울대학교 연구윤리 지침에 따라 가능한 한 영구 보관할 예정입니다.</span></u> 
+저희는 이 연구를 통해 얻은 모든 개인 정보의 비밀 보장을 위해 최선을 다할 것입니다. 이 연구에서 얻어진 개인 정보가 학회지나
+학회에 공개 될 때 귀하의 이름 및 기타 개인 정보는 사용되지 않을 것입니다. 그러나 만일 법이 요구하면 귀하의 개인정보는 제공될 수도 있습니다. 또한 모니터 요원, 점검 요원, 생명윤리위원회는 연구참여자의 개인
+정보에 대한 비밀 보장을 침해하지 않고 관련규정이 정하는 범위 안에서 본 연구의 실시 절차와 자료의 신뢰성을 검증하기 위해 연구 결과를 직접 열람할 수 있습니다. 귀하가 본 동의서에 서명하는 것은, 이러한 사항에
+대하여 사전에 알고 있었으며 이를 허용한다는 동의로 간주될 것입니다.
 <br><br>
 10. 이 연구에 참가하면 사례가 지급됩니까?
 <br>
@@ -125,8 +128,14 @@
 </p>
 
 <form class='center-text'>
-  <input type='checkbox' id='consent' name='consent' value='1'> 위 내용을 이해 했으며 실험 참여에 동의합니다. 
+    본 연구에 참여하시겠습니까?
+    <input type='checkbox' id='consent' name='consent' value='1'> 예 &nbsp;&nbsp;
+    <input type='checkbox' id='noconsent' name='consent' value='0'> 아니오
 </form>
+
+<!-- <form class='center-text'>
+  <input type='checkbox' id='consent' name='consent' value='1'> 위 내용을 이해 했으며 실험 참여에 동의합니다. 
+</form> -->
 
 <br><br>
 <button type='button' id='gotoInstructions'>실험으로</button>
@@ -143,7 +152,7 @@
     <div>
 
 <br><br>
-<p class='block-text'> 이 실험에서 귀하는 간단한 발화 맥락과 함께 제공되는 한국어 문장들을 읽게 될 것입니다. 각 발화 상황을 읽고 해당 문장에 대해 어떻게 해석하였는지에 대해 답변해 주십시오 (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 추가 질문에 답하셔도 됩니다). 귀하는 총 12개의 발화 상황들을 읽게 될 것입니다.</p>
+<p class='block-text'> 이 실험에서 귀하는 간단한 발화 맥락과 함께 제공되는 한국어 문장들을 읽게 될 것입니다. 각 발화 상황을 읽고 해당 문장에 대해 어떻게 해석하였는지에 대해 답변해 주십시오 (더불어 그밖에 하시고 싶으신 말씀이 있으시면 자유 기고 방식으로 추가 질문에 답하셔도 됩니다). <u>귀하는 총 16개의 발화 상황들을 읽게 될 것입니다. 실험 소요 예상시간은 약 6-10분 입니다.</u></p>
 
 <p class='block-text'> 설문은 인터넷이 가능한 모든 장소에서 참여가 가능합니다. 다만 집중해서 문장들을 읽으실 수 있게 조용한 곳에서 설문을 진행하시길 권장 드립니다. 참여하시는 순간부터 모든 데이터는 자동으로 저장됩니다. 모든 문항에 차례로 응답하여야 다음 순서로 넘어갈 수 있으며 마지막 문항까지 모두 응답하셔야 데이터 분석에 사용가능합니다. 발화 해석/판단 설문 이후 끝에 간단히 귀하의 성별, 연령, 구사하는 언어 및 출신지역을 여쭙는 간단한 설문이 진행 될 것입니다. </p>
 
@@ -163,7 +172,7 @@
         <div>
 
 
-<p><span style="font-weight: bold; color: #8C1515;"> 상황 12개 중 <span class="item_number">{{}}</span> 번째</span></p>
+<p><span style="font-weight: bold; color: #8C1515;"> 상황 16개 중 <span class="item_number">{{}}</span> 번째</span></p>
 
 
 
@@ -171,19 +180,26 @@
 <form id='textDisplay1'>
 
 <p class='block-text2'>
-아래 대화 맥락을 읽고 밑줄 친 문장에 대한 질문에 답해주세요.
+아래 대화 맥락을 읽고 <span style="font-weight: bold;" class='currentName2'>{{}}</span>의 발화 내용도 음성으로 들으신 후 몇 가지 질문들에 답해주세요.
 </p>
 
 <p class='block-text'>
     <span class='currentName1'>{{}}</span>:
-    <span class='currentContext'>{{}}</span> 줄
+    <span class='currentContext'>{{}}</span>
     <span class='currentVerb1'>{{}}</span>?
     <br>
     <span class='currentName2'>{{}}</span>:
     <u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</u>,
-    <u><span class='currentComp'>{{}}</span> 줄
-    <span class='currentVerb2'>{{}}</span>.</u>
+    <audio id="currentAudio" controls="">
+    <source src="#" type="audio/wav"></audio>
+    <!-- <u><span class='currentComp'>{{}}</span>
+    <span class='currentVerb2'>{{}}</span>.</u> -->
 </p>
+
+<span style="font-size: 80%;"> 음성 파일을 클릭해 맥락 속 
+<span style="font-weight: bold;" class='currentName2'>{{}}</span>의 발화 내용을 들어 주세요. 
+<br> 파일 로딩에 시간이 약간 걸릴 수 있습니다. 
+</span>
 
 </form>
 
@@ -222,7 +238,7 @@
 <!-- Q2: veridicality rating -->
 <form id='responseForm2'>
 
-<p class='block-text2'>Q2: 위에 밑줄 쳐 진 
+<p class='block-text2'>Q2: 위에 음성으로 들으신 
     <span class='currentName2'>{{}}</span>의 
     발화에서, 발화자 <span class='currentName2'>{{}}</span>는 다음 사항이 사실일 것이라고 얼마나 확신한다고 생각하십니까?
 </p>
@@ -284,7 +300,7 @@
 
 
 <!-- Optional responses -->
-<p id='optional1' class='block-text2'>[선택 답변] 그 밖에 위 문제에 관해 하시고 싶으신 말씀이 있으십니까?</p>
+<p id='optional1' class='block-text2'>[선택 답변] 그 밖에 혹시 위 문제에 관해 하시고 싶으신 말씀이 있으십니까? (없으시면 아래를 빈 칸으로 비워두시고 다음 문항으로 넘어가시면 됩니다.)</p>
 
 <input type='text' id="commentBox1" class="commentBox" style="width: 400px;" value="" />
 
@@ -312,7 +328,7 @@
 <form id='languageForm'>
 
 <p class='questionSent'> 
-본 실험이 끝났습니다. 끝으로 아래 설문을 간단히 작성해 주시기 바랍니다. 
+실험 참여를 마치시기 위해 마지막으로 아래 설문을 간단히 작성해 주시기 바랍니다.
 </p> <br>
 
 
@@ -334,7 +350,7 @@
 <input type='radio' class='age' name='ageC' id='30s' value='30s' /> 30대 <br>
 <input type='radio' class='age' name='ageC' id='40s' value='40s' /> 40대 <br>
 <input type='radio' class='age' name='ageC' id='50s' value='50s' /> 50대 <br>
-<input type='radio' class='age' name='ageC' id='60s' value='60s' /> 60대 이상 <br>
+<input type='radio' class='age' name='ageC' id='60s' value='60s' /> 60대 이상 
 </p>
 </form>
 
@@ -344,13 +360,14 @@
 <form id='regionForm'>
 <p class='questionSent'> 3. 귀하께서 5세-20세 사이 가장 오래 거주하신 지역이 어디이십니까?
 <br>
-<input type='radio' class='reg' name='regC' id='seoul' value='seoul' /> 서울/경기 <br>
-<input type='radio' class='reg' name='regC' id='jeolla' value='jeolla' /> 전남/전북 <br>
-<input type='radio' class='reg' name='regC' id='gyeongsang' value='gyeongsang' /> 경남/경북 <br>
-<input type='radio' class='reg' name='regC' id='chungcheong' value='chungcheong' /> 충남/충북 <br>
+<input type='radio' class='reg' name='regC' id='seoul' value='seoul' /> 서울/경기 &nbsp;&nbsp;&nbsp;&nbsp;
 <input type='radio' class='reg' name='regC' id='gangwon' value='gangwon' /> 강원도 <br>
-<input type='radio' class='reg' name='regC' id='jeju' value='jeju' /> 제주도 <br>
-<input type='radio' class='reg' name='regC' id='nonkor' value='nonkor' /> 외국:  <input type='text' name='oreg_com' id='oreg_com' /><br>
+<input type='radio' class='reg' name='regC' id='jeolla' value='jeolla' /> 전남/전북 &nbsp;&nbsp;&nbsp;&nbsp;
+<input type='radio' class='reg' name='regC' id='jeju' value='jeju' /> 제주도
+<br>
+<input type='radio' class='reg' name='regC' id='gyeongsang' value='gyeongsang' /> 경남/경북 &nbsp;&nbsp;&nbsp;&nbsp;
+<input type='radio' class='reg' name='regC' id='nonkor' value='nonkor' /> 외국: <input type='text' name='oreg_com' id='oreg_com' /><br>
+<input type='radio' class='reg' name='regC' id='chungcheong' value='chungcheong' /> 충남/충북 
 </p>
 </form>
 
@@ -378,11 +395,17 @@
 
 
 <form id='contactForm'>
-<p class='questionSent'>6. 만일 사례품(스타벅스 기프티콘)을 아직 받지 않으셨다면, 사례품 전송을 위해 귀하의 휴대폰 번호가 필요합니다. 이 번호는 기프티콘 처리 확인 후 즉시 폐기되고 제 3자와 공유되지 않습니다. 만일 사례품을 이미 받으셨다면 추후 기프티콘이 추가 제공되는 다른 실험에 참여 의사가 있으신지 간단히 의향을 남겨주시면 감사하겠습니다. (참여 의사를 표명하셨어도 그 때 가서 실험의 성격 및 본인의 일정에 따라 참여 여부를 자유로이 변경하실 수 있습니다.)
-<br>
-<input type='text' id='contact' value="" />
-</p>
+    <p class='questionSent'> 
+    <span style="font-weight: bold; color: #8C1515;"> [중요!]
+    </span>
+    <u>참여 확인 및 참여비 지급을 위해 귀하의 성함 및 휴대폰 번호를 아래에 남겨 주십시오.</u> 수집된 개인정보는 기프티콘 지급용으로만 사용되며, 기프티콘 지급 후 즉각 폐기되고 제 3자와 공유되지 않습니다. 원활한 사례금 지급을 위해 아래에 성함 및 핸드폰 번호를 올바르게 기입하였는지 확인 부탁드립니다!
+    <br>
+    이름: <input type='text' id='partName' value="" />
+    <br>
+    휴대폰 번호: <input type='text' id='contact' value="" />
+    </p>
 </form>
+
 
 
 </form>
@@ -398,9 +421,6 @@
 </div>
 
 
-<div class='slide' id='finish'>
-<p>실험이 끝났습니다. 참여해 주셔서 매우 감사합니다! </p>
-</div>
 
 </body>
 </html>
